# fwhisper

./: .gitmodules  .metadata  README.md  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Runner/: AppDelegate.swift  Info.plist
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
ios/: fwhisper.podspec
lib/: fwhisper.dart  fwhisper_bindings_generated.dart  fwhisper_inference_request.dart  fwhisper_io.dart
lib/fns/: fwhisper_io_helpers.dart  fwhisper_io_inference.dart  fwhisper_io_transcription.dart
macos/: fwhisper.podspec
macos/Classes/: fwhisper.mm
macos/Frameworks/: libfwhisper.dylib  libwhisper.dylib
scripts/: autoupdate_macos.sh
src/: CMakeLists.txt  fwhisper.h  fwhisper.mm
